[gd_scene load_steps=12 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/base_out_atlas.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 506, 96, 44, 37 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 598, 90, 50, 45 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 2 )

[node name="lobby" type="Node"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
margin_left = -1840.0
margin_top = -1085.0
margin_right = 2462.0
margin_bottom = 1628.0
texture = SubResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccount" type="CanvasLayer" parent="."]

[node name="AccountPanel" type="Panel" parent="CreateAccount"]
margin_left = 25.0
margin_top = 20.0
margin_right = 775.0
margin_bottom = 596.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="Label" parent="CreateAccount/AccountPanel"]
margin_left = 98.8595
margin_top = 71.4178
margin_right = 227.859
margin_bottom = 106.418
custom_fonts/font = SubResource( 3 )
text = "User Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNameEdit" type="LineEdit" parent="CreateAccount/AccountPanel"]
margin_left = 231.016
margin_top = 69.0218
margin_right = 457.016
margin_bottom = 106.022
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="Label" parent="CreateAccount/AccountPanel"]
margin_left = 99.8595
margin_top = 138.418
margin_right = 228.859
margin_bottom = 173.418
custom_fonts/font = SubResource( 5 )
text = "Password:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwordEdit" type="LineEdit" parent="CreateAccount/AccountPanel"]
margin_left = 231.016
margin_top = 137.022
margin_right = 457.016
margin_bottom = 174.022
custom_fonts/font = SubResource( 6 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="CreateAccount/AccountPanel"]
margin_left = 523.0
margin_top = 139.0
margin_right = 632.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 7 )
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccountList" type="RichTextLabel" parent="CreateAccount/AccountPanel"]
margin_left = 35.0
margin_top = 238.0
margin_right = 503.0
margin_bottom = 382.0
custom_fonts/normal_font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPPost" type="HTTPRequest" parent="."]
[connection signal="pressed" from="CreateAccount/AccountPanel/Create" to="." method="_on_Create_pressed"]
[connection signal="request_completed" from="HTTPPost" to="." method="_on_HTTPPost_request_completed"]
